# academy_awards_data_feed

./: .gitignore
wolfram_alpha_api/: AcademyAwards2025.json  dvc.yaml  envrc.template  pyproject.toml  sample_2025.json
wolfram_alpha_api/data/: .gitignore
wolfram_alpha_api/src/common/: pyproject.toml
wolfram_alpha_api/src/common/common/: util.py
wolfram_alpha_api/src/extract/: pyproject.toml
wolfram_alpha_api/src/extract/extract/: main.py
wolfram_alpha_api/src/extrapolate/: pyproject.toml
wolfram_alpha_api/src/extrapolate/extrapolate/: main.py
wolfram_alpha_api/src/retrieve/: pyproject.toml
wolfram_alpha_api/src/retrieve/retrieve/: main.py
wolfram_alpha_api/src/wolfram_alpha_api/: __main__.py
