[project]
name = "wolfram-alpha-api"
version = "0.1.0"
description = ""
authors = [
    {name = "Darshan Kothari",email = "dkothari777@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "requests"
]

[tool.poetry]
packages = [{include = "wolfram_alpha_api", from = "src"}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
