[project]
name = "wolfram-alpha-api"
version = "0.1.0"
description = ""
authors = [
    {name = "Darshan Kothari",email = "dkothari777@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.10"

[tool.poetry.dependencies]
requests = "*"
dvc = "*"
common = {path ="src/common", develop = true}
retrieve = {path ="src/retrieve", develop = true}
extract = {path ="src/extract", develop = true}
aiohttp = "^3.12.9"

[tool.poetry]
packages = [
                {include = "retrieve", from="src/retrieve"},
                {include = "extract", from="src/extract"}
            ]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
